--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
     image: "integrity"
     ports:
       - "4444:4444"
-  platfomr:
+  platform:
     image: "platform"
     ports:
       - "4567:4567"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
