--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,13 @@ services:
       - "4567:4567"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+  ruby-base:
+    build:
+      context: "./ruby-base/"
+      dockerfile: "Dockerfile"
+    image: "platform-base-ruby:latest"
+  javascript-base:
+    build:
+      context: "./javascript-base/"
+      dockerfile: "Dockerfile"
+
