add the spec helper for ruby

--- a/ruby-base/Dockerfile
+++ b/ruby-base/Dockerfile
@@ -9,3 +9,4 @@ ADD ./Gemfile.lock /usr/src/problem/Gemfile.lock
 
 RUN bundle
 RUN mkdir /usr/src/problem/spec
+ADD ./spec_helper.rb /usr/src/problem/spec/spec_helper.rb
