--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - "4567:4567"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    env:
+      - INTEGRITY_APP_URL: "http://integrity:4444/"
   ruby-base:
     build:
       context: "./ruby-base/"
