--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,13 @@ services:
   integrity:
     restart: always
     image: "integrity"
-    ports:
-      - "4444:4444"
   platform:
     image: "platform"
     ports:
       - "4567:4567"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    env:
+    environment:
       - INTEGRITY_APP_URL: "http://integrity:4444/"
   ruby-base:
     build:
